# mantisdb

./: .editorconfig  .env.production.template  .gitignore  100_PERCENT_COMPLETE.md  ADMIN_FIXES_SUMMARY.md  BENCHMARK_COMPARISON.md  BUILD.md  BUILD_FIX_SUMMARY.md  CLEANUP_STATUS.md  CODE_STYLE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CRITICAL_ITEMS_COMPLETE.md  DASHBOARD_FIXES_COMPLETE.md  DATABASE_CONNECTED.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_100_PERCENT_COMPLETE.md  FINAL_BUILD_INSTRUCTIONS.md  FINAL_STATUS.md  FIXING_ALL_MOCK_DATA.md  HIGH_MEDIUM_PRIORITY_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INSTALLER_SUMMARY.md  LICENSE  MULTI_MODEL_FEATURES.md  Makefile  PRODUCTION_READY_IMPLEMENTATION.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_RELEASE.md  PROJECT_STRUCTURE.md  QOL_FEATURES_COMPLETED.md  QOL_FEATURES_FINAL_STATUS.md  QOL_FEATURES_STATUS.md  QUICK_START.md  QUICK_START_ADMIN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY_V1.0.md  SDK_PUBLISHING_SUMMARY.md  (+27 more)
admin/: ADMIN_FEATURES.md  ADMIN_UI_FEATURES.md  DASHBOARD_UPDATE_SUMMARY.md  README.md  STREAMLINED_UI.md
admin_api/: server.go
advanced/: README.md  write_optimizer.go
api/: server.go
benchmark/: benchmark.go
cache/: cache_manager.go  dependency_graph.go  ttl_manager.go
cgo/: Makefile  btree.c  buffer_pool.c  sql_parser.c  sql_parser.h  storage_engine.c  storage_engine.h
checkpoint/: config.go  filter.go  manager.go  recovery.go  types.go  validator.go
clients/: PUBLISHING.md  README.md  TEST_SUMMARY.md  run_tests.sh  test-config.yaml
clients/python/: README.md  pyproject.toml
clients/python/examples/: async_example.py  sync_example.py
clients/python/tests/: __init__.py  test_integration.py  test_performance.py
config/: build_config.go  build_config_loader.go  build_config_test.go  config.go
configs/: development.yaml  edge_case_tests.json  production.yaml  reliability_tests.json
docs/: DOCUMENTATION_INDEX.md  README.md  SUPABASE_DASHBOARD_GUIDE.md  TIME_SERIES_ARCHITECTURE.md  WRITE_OPTIMIZATION.md  connection-pooling.md  rest-api.md
durability/: async_writer.go  config.go  durability.go  durability_test.go  example_test.go  flush_manager.go  policy.go  sync_optimizer.go  sync_writer.go
errors/: README.md  corruption_detector.go  corruption_recovery.go  disk_monitor.go  disk_recovery.go  error_handler.go  error_handler_impl.go  error_handler_test.go  io_handler.go  io_operations.go  memory_monitor.go  memory_recovery.go
health/: health.go
integrity/: README.md  alert_handlers.go  checksum_engine.go  checksum_engine_test.go  corruption_detector.go  errors.go  example_test.go  interface.go  monitor.go  system.go  types.go  wal_integrity.go
models/: columnar.go  document.go  keyvalue.go
monitoring/: README.md  aggregator.go  alerting.go  alerts.yml  audit.go  example_test.go  exporter.go  health.go  logging.go  metrics.go  prometheus.yml  system.go
pool/: pool.go
query/: executor.go  optimizer.go  parser.go
rpo/: README.md  alerting.go  config.go  example_test.go  go.mod  manager.go
rust-core/: .gitignore  Cargo.toml  Makefile  README.md  build.sh  openapi.yaml
rust-core/benches/: cache_bench.rs  comprehensive_bench.rs  kv_bench.rs  mixed_extreme_bench.rs  storage_bench.rs
rust-core/examples/: rest_api_server.rs
rust-core/src/: adaptive_pool.rs  batch.rs  cache.rs  cache_maintenance.rs  cdc.rs  columnar_engine.rs  document_store.rs  error.rs  fast_writer.rs  ffi.rs  fts.rs  geospatial.rs  graphql_api.rs  lib.rs  observability.rs  persistent_storage.rs  pool.rs  pool_ffi.rs  production_config.rs  query_analyzer.rs  query_builder.rs  rest_api.rs  rls.rs  rls_ffi.rs  storage.rs  timeseries.rs  vector_db.rs
rust-core/src/admin_api/: auth.rs  backups.rs  columnar.rs  config.rs  document.rs  keyvalue.rs  logs.rs  mod.rs  monitoring.rs  oauth.rs  queries.rs  rls_api.rs  security.rs  storage.rs  tables.rs
rust-core/src/durability/: fsync.rs  manager.rs  mod.rs  policy.rs
rust-core/src/sql/: ast.rs  executor.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs  types.rs
rust-core/src/storage_engine/: btree.rs  buffer_pool.rs  index.rs  lsm.rs  mod.rs  page.rs  types.rs
rust-core/src/transaction/: deadlock.rs  isolation.rs  lock_manager.rs  mod.rs  mvcc.rs  transaction.rs  types.rs
rust-core/src/wal/: entry.rs  manager.rs  mod.rs  recovery.rs  segment.rs
rust-core/tests/: crash_recovery_test.rs  disk_storage_test.rs  production_viability.rs  sql_join_test.rs
scripts/: build-all.sh  build-c-storage.sh  build-optimized.sh  build-production.sh  build-release.sh  build.sh  cleanup.sh  create-dmg.sh  create-homebrew.sh  create-installers.sh  dev.sh  format-all.sh  install.ps1  install.sh  publish-clients.sh  release.sh
shutdown/: shutdown.go
storage/: storage_cgo.go  storage_default.go  storage_default_rust.go  storage_pure.go  (+2 more)
(+277 files in other folders)
