[package]
name = "mantisdb-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mantisdb_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Lock-free data structures
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Serialization (zero-copy)
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"

# Memory management
mimalloc = { version = "0.1", default-features = false }

# Hashing
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Async runtime for REST API and connection pooling
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# REST API framework (high-performance)
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "fs"] }

# Connection pooling
deadpool = { version = "0.10", features = ["rt_tokio_1"] }
bb8 = "0.8"

# Serialization for REST API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
http-body-util = "0.1"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Memory mapping
memmap2 = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Atomic operations
atomic = "0.6"

# FFI
libc = "0.2"
lazy_static = "1.4"

# System info
num_cpus = "1.16"

# Random for token generation
rand = "0.8"
base64 = "0.21"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Security
argon2 = "0.5"
regex = "1.10"
jsonwebtoken = "9.2"
oauth2 = "4.4"
url = "2.5"

# Serialization for WAL and storage
bincode = "1.3"

# Temporary directory for tests
[dev-dependencies.tempfile]
version = "3.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
panic = "unwind"

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "kv_bench"
harness = false

[[bench]]
name = "mixed_extreme_bench"
harness = false

[[bin]]
name = "admin-server"
path = "src/bin/admin-server.rs"
