[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantisdb-python"
version = "1.0.0"
description = "Official Python client library for MantisDB"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["database", "mantisdb", "client"]
authors = [
  { name = "MantisDB Team" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiohttp>=3.8.0",
  "requests>=2.28.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "mypy>=1.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
]

[project.urls]
Documentation = "https://github.com/mantisdb/mantisdb#readme"
Issues = "https://github.com/mantisdb/mantisdb/issues"
Source = "https://github.com/mantisdb/mantisdb"